# api-load-testing-framework

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: auth_flow.py  basic_get.py  rest_api.py
plans/: checklist.md  implementation_plan.md  prd.md  project.md
plans/phases/: phase-1-foundation-scenario-dsl.md  phase-2-traffic-patterns.md  phase-3-single-worker-engine.md  phase-4-multi-worker-distribution.md  phase-5-cli-interface.md  phase-6-post-run-reports.md  phase-7-live-react-dashboard.md  phase-8-polish-documentation-examples.md
src/loadforge/: __init__.py
src/loadforge/_internal/: config.py  errors.py  logging.py  types.py
src/loadforge/cli/: __init__.py  app.py  dashboard.py  init_cmd.py  report.py  run.py
src/loadforge/dsl/: decorators.py  http_client.py  loader.py  scenario.py
src/loadforge/engine/: __init__.py  _user_utils.py  coordinator.py  protocol.py  rate_limiter.py  runner.py  scheduler.py  session.py  worker.py
src/loadforge/metrics/: __init__.py  aggregator.py  collector.py  histogram.py  models.py  store.py
src/loadforge/patterns/: __init__.py  base.py  composite.py  constant.py  diurnal.py  ramp.py  spike.py  step.py
src/loadforge/reports/: __init__.py  charts.py  exporters.py  generator.py
src/loadforge/reports/templates/: report.html.j2
src/loadforge/reports/templates/partials/: errors.html.j2  latency.html.j2  summary.html.j2  throughput.html.j2
tests/: conftest.py
tests/e2e/: test_cli.py
tests/e2e/scenarios/: example_scenario.py
tests/integration/: test_coordinator.py  test_placeholder.py  test_runner.py  test_worker.py
tests/unit/: test_aggregator.py  test_charts.py  test_collector.py  test_config.py  test_decorators.py  test_exporters.py  test_histogram.py  test_http_client.py  test_patterns.py  test_rate_limiter.py  test_scenario.py  test_scheduler.py  test_store.py
