[project]
name = "loadforge"
version = "0.1.0"
description = "Forge realistic load tests as Python code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Ahmad" }]
keywords = ["load-testing", "performance", "async", "aiohttp", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.11",
    "uvloop>=0.21; sys_platform != 'win32'",
    "typer>=0.15",
    "rich>=13.9",
    "numpy>=2.1",
    "hdrhistogram>=0.10",
    "jinja2>=3.1",
    "plotly>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "aioresponses>=0.7",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[project.scripts]
loadforge = "loadforge.cli.app:app"

[project.urls]
Homepage = "https://github.com/github-builder/loadforge"
Repository = "https://github.com/github-builder/loadforge"
Issues = "https://github.com/github-builder/loadforge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loadforge"]

# ==============================================================================
# RUFF — Linting + Formatting
# ==============================================================================

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # Core Python errors
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (unused imports, undefined names)
    # Import hygiene
    "I",     # isort (import sorting)
    "TCH",   # type-checking-only imports (behind TYPE_CHECKING)
    # Modern Python
    "UP",    # pyupgrade (modern syntax for 3.12+)
    # Naming
    "N",     # pep8-naming
    # Type annotations
    "ANN",   # flake8-annotations (enforce type hints)
    # Bug prevention
    "B",     # flake8-bugbear (mutable defaults, bare except)
    "A",     # flake8-builtins (don't shadow builtins)
    "SIM",   # flake8-simplify
    "RET",   # flake8-return (inconsistent returns)
    "ARG",   # flake8-unused-arguments
    # Async correctness
    "ASYNC", # flake8-async (blocking calls in async)
    # Security
    "S",     # flake8-bandit (hardcoded secrets, exec, eval)
    # Pathlib
    "PTH",   # flake8-use-pathlib (Path over os.path)
    # Docstrings
    "D",     # pydocstyle (Google convention)
    # Ruff-specific
    "RUF",   # ruff-specific rules
]

ignore = [
    # Docstring conflicts (pick one style)
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    # Too noisy for __init__.py
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__ (class docstring suffices)
    # Annotation exceptions
    "ANN401", # Any type — caught by mypy strict instead (avoids duplicate errors)
    # Return style
    "RET504", # unnecessary assignment before return (improves readability)
]

[tool.ruff.lint.per-file-ignores]
# Tests: no annotations, no docstrings, assert is fine, unused fixture args ok
"tests/**/*.py" = ["ANN", "D", "S101", "ARG", "S311"]
"tests/conftest.py" = ["ANN", "D", "ARG"]
# Examples: user-facing, should be simple and readable
"examples/**/*.py" = ["D", "ANN", "S101", "S311"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["loadforge"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

# ==============================================================================
# MYPY — Static Type Checking
# ==============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",   # require error codes on type: ignore
    "redundant-cast",
    "truthy-bool",
    "unused-awaitable",      # catch unawaited coroutines
]

mypy_path = "src"
packages = ["loadforge"]

# Prevent Any creep
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true

# Third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "hdrhistogram.*",
    "uvloop",
    "plotly.*",
    "aioresponses.*",
]
ignore_missing_imports = true

# Relax rules for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_any_explicit = false

# ==============================================================================
# PYTEST — Test Framework
# ==============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated tests with no external dependencies",
    "integration: tests that use real I/O (aiohttp server, file system)",
    "e2e: end-to-end tests that invoke the CLI",
    "slow: tests that take > 5 seconds",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:aiohttp.*",
]

# ==============================================================================
# COVERAGE — Code Coverage
# ==============================================================================

[tool.coverage.run]
source = ["loadforge"]
branch = true
parallel = true
omit = [
    "src/loadforge/_internal/logging.py",
    "src/loadforge/dashboard/static/*",
    "src/loadforge/engine/session.py",
    "src/loadforge/engine/worker.py",
]

[tool.coverage.paths]
source = [
    "src/loadforge",
    "*/site-packages/loadforge",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
    "@overload",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
